<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="150dp"
        android:scaleType="centerCrop"
        app:srcCompat="@drawable/banner" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_margin="10dp"
        android:background="@color/accent"
        android:onClick="submit"
        android:text="@string/result"
        android:textColor="@color/icons" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/imageView">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="10dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/q1"
                android:textColor="@color/primary_text"
                android:textSize="22sp"
                android:textStyle="bold" />

            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <RadioButton
                    android:id="@+id/a1_1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/a1_1"
                    android:textColor="@color/secondary_text"
                    android:textSize="16sp" />

                <RadioButton
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/a1_2"
                    android:textColor="@color/secondary_text"
                    android:textSize="16sp" />

                <RadioButton
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/a1_3"
                    android:textColor="@color/secondary_text"
                    android:textSize="16sp" />

                <RadioButton
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/a1_4"
                    android:textColor="@color/secondary_text"
                    android:textSize="16sp" />
            </RadioGroup>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/q2"
                android:textColor="@color/primary_text"
                android:textSize="22sp"
                android:textStyle="bold" />

            <CheckBox
                android:id="@+id/a2_1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/a2_1"
                android:textColor="@color/secondary_text"
                android:textSize="16sp" />

            <CheckBox
                android:id="@+id/a2_2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/a2_2"
                android:textColor="@color/secondary_text"
                android:textSize="16sp" />

            <CheckBox
                android:id="@+id/a2_3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/a2_3"
                android:textColor="@color/secondary_text"
                android:textSize="16sp" />

            <CheckBox
                android:id="@+id/a2_4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/a2_4"
                android:textColor="@color/secondary_text"
                android:textSize="16sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/q3"
                android:textColor="@color/primary_text"
                android:textSize="22sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/a3"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:textColor="@color/secondary_text"
                android:textSize="16sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/q4"
                android:textColor="@color/primary_text"
                android:textSize="22sp"
                android:textStyle="bold" />

            <CheckBox
                android:id="@+id/a4_1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/a4_1"
                android:textColor="@color/secondary_text"
                android:textSize="16sp" />

            <CheckBox
                android:id="@+id/a4_2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/a4_2"
                android:textColor="@color/secondary_text"
                android:textSize="16sp" />

            <CheckBox
                android:id="@+id/a4_3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/a4_3"
                android:textColor="@color/secondary_text"
                android:textSize="16sp" />

            <CheckBox
                android:id="@+id/a4_4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/a4_4"
                android:textColor="@color/secondary_text"
                android:textSize="16sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/q5"
                android:textColor="@color/primary_text"
                android:textSize="22sp"
                android:textStyle="bold" />

            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <RadioButton
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/a5_1"
                    android:textColor="@color/secondary_text"
                    android:textSize="16sp" />

                <RadioButton
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/a5_2"
                    android:textColor="@color/secondary_text"
                    android:textSize="16sp" />

                <RadioButton
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/a5_3"
                    android:textColor="@color/secondary_text"
                    android:textSize="16sp" />

                <RadioButton
                    android:id="@+id/a5_4"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/a5_4"
                    android:textColor="@color/secondary_text"
                    android:textSize="16sp" />
            </RadioGroup>
        </LinearLayout>
    </ScrollView>
</RelativeLayout>